# common_code_and_config

./: README.md
cypress/: README.md
html_css/: README.md
jest/: README.md  eslint.config.ts  jest.config.ts  package.json  tsconfig.json  tsconfig.test.json
js_ts/: README.md  tsconfig.json
js_ts/configs/: constants.ts
js_ts/utils/: logForFE.ts
next_ts/: README.md
node_js/: README.md
node_ts/: package.json
node_ts/utils/: log4js.ts  loggerWrapper.ts  tslog.ts
playwright_python/: README.md
playwright_ts/: README.Md  package.json  playwright.config.ts
pytest/: README.md
python/: README.md  main.py  pyproject.toml
python/configs/: constants.py
python/cores/factory/: read_file_factory.py  write_data_factory.py
python/cores/strategy/read_file/: base_strategy.py  read_csv_file.py  read_excel_file.py  read_json_file.py  read_parquet_file.py
python/cores/strategy/write_data/: __init__.py  base_strategy.py  to_excel.py  to_parquet.py
python/utils/: cleanup_file_or_folder.py  create_file.py  detect_file_type.py  logger.py  logger_wrapper.py
react_js/: README.md  eslint.config.js  jsconfig.json  vite.config.js
react_js/src/utils/: logger.js
react_ts/: README.md  eslint.config.ts  package.json  tsconfig.app.json  tsconfig.json  tsconfig.ts  vite.config.ts
react_ts/src/utils/: logger.ts
selenium/: README.md
vitest/: README.md  eslint.config.ts  package.json  tsconfig.json  vitest.config.ts
